--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -371,3 +371,6 @@ width: 100% !important;
     margin: 0!important;
     padding: 0.5rem 0.7rem !important;
 }
+.modal-dialog.modal-md{
+    width: 600px !important;
+}
